feat: add jwt token & spatie/laravel-permission (error)
